<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_square"
            android:icon="@drawable/ic_menu_square"
            android:title="@string/menu_square" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_menu_community"
            android:title="@string/menu_community" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
<!--        <item-->
<!--            android:id="@+id/nav_about"-->
<!--            android:icon="@drawable/ic_menu_setting"-->
<!--            android:title="写文章" />-->
    </group>
</menu>