<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.community.CommunityFragment"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout_community"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_hot" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_recommend" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_in" />
        </com.google.android.material.tabs.TabLayout>

        <Button
            android:id="@+id/bt_createCommunity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/extra" />

    </RelativeLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp2_community"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />

</LinearLayout>